// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`a game 1`] = `
Object {
  "east": Object {
    "availableContracts": Array [
      Array [
        3,
        "SPADE",
      ],
      Array [
        3,
        "NO_TRUMPS",
      ],
      Array [
        4,
        "CLUB",
      ],
      Array [
        4,
        "DIAMOND",
      ],
      Array [
        4,
        "HEART",
      ],
      Array [
        4,
        "SPADE",
      ],
      Array [
        4,
        "NO_TRUMPS",
      ],
      Array [
        5,
        "CLUB",
      ],
      Array [
        5,
        "DIAMOND",
      ],
      Array [
        5,
        "HEART",
      ],
      Array [
        5,
        "SPADE",
      ],
      Array [
        5,
        "NO_TRUMPS",
      ],
      Array [
        6,
        "CLUB",
      ],
      Array [
        6,
        "DIAMOND",
      ],
      Array [
        6,
        "HEART",
      ],
      Array [
        6,
        "SPADE",
      ],
      Array [
        6,
        "NO_TRUMPS",
      ],
      Array [
        7,
        "CLUB",
      ],
      Array [
        7,
        "DIAMOND",
      ],
      Array [
        7,
        "HEART",
      ],
      Array [
        7,
        "SPADE",
      ],
      Array [
        7,
        "NO_TRUMPS",
      ],
    ],
    "bid": "PASS",
    "currentUserAction": true,
    "declarer": false,
    "dummy": false,
    "isUser": false,
    "name": "player2Name",
    "numberOfCardsHeld": 13,
  },
  "north": Object {
    "availableContracts": Array [
      Array [
        3,
        "SPADE",
      ],
      Array [
        3,
        "NO_TRUMPS",
      ],
      Array [
        4,
        "CLUB",
      ],
      Array [
        4,
        "DIAMOND",
      ],
      Array [
        4,
        "HEART",
      ],
      Array [
        4,
        "SPADE",
      ],
      Array [
        4,
        "NO_TRUMPS",
      ],
      Array [
        5,
        "CLUB",
      ],
      Array [
        5,
        "DIAMOND",
      ],
      Array [
        5,
        "HEART",
      ],
      Array [
        5,
        "SPADE",
      ],
      Array [
        5,
        "NO_TRUMPS",
      ],
      Array [
        6,
        "CLUB",
      ],
      Array [
        6,
        "DIAMOND",
      ],
      Array [
        6,
        "HEART",
      ],
      Array [
        6,
        "SPADE",
      ],
      Array [
        6,
        "NO_TRUMPS",
      ],
      Array [
        7,
        "CLUB",
      ],
      Array [
        7,
        "DIAMOND",
      ],
      Array [
        7,
        "HEART",
      ],
      Array [
        7,
        "SPADE",
      ],
      Array [
        7,
        "NO_TRUMPS",
      ],
    ],
    "bid": "PASS",
    "currentUserAction": false,
    "declarer": true,
    "dummy": false,
    "isUser": false,
    "name": "player1Name",
    "numberOfCardsHeld": 13,
  },
  "south": Object {
    "availableContracts": Array [
      Array [
        3,
        "SPADE",
      ],
      Array [
        3,
        "NO_TRUMPS",
      ],
      Array [
        4,
        "CLUB",
      ],
      Array [
        4,
        "DIAMOND",
      ],
      Array [
        4,
        "HEART",
      ],
      Array [
        4,
        "SPADE",
      ],
      Array [
        4,
        "NO_TRUMPS",
      ],
      Array [
        5,
        "CLUB",
      ],
      Array [
        5,
        "DIAMOND",
      ],
      Array [
        5,
        "HEART",
      ],
      Array [
        5,
        "SPADE",
      ],
      Array [
        5,
        "NO_TRUMPS",
      ],
      Array [
        6,
        "CLUB",
      ],
      Array [
        6,
        "DIAMOND",
      ],
      Array [
        6,
        "HEART",
      ],
      Array [
        6,
        "SPADE",
      ],
      Array [
        6,
        "NO_TRUMPS",
      ],
      Array [
        7,
        "CLUB",
      ],
      Array [
        7,
        "DIAMOND",
      ],
      Array [
        7,
        "HEART",
      ],
      Array [
        7,
        "SPADE",
      ],
      Array [
        7,
        "NO_TRUMPS",
      ],
    ],
    "bid": Array [
      3,
      "HEART",
    ],
    "currentUserAction": false,
    "declarer": false,
    "dummy": true,
    "isUser": false,
    "name": "player3Name",
    "numberOfCardsHeld": 13,
  },
  "west": Object {
    "availableContracts": Array [
      Array [
        3,
        "SPADE",
      ],
      Array [
        3,
        "NO_TRUMPS",
      ],
      Array [
        4,
        "CLUB",
      ],
      Array [
        4,
        "DIAMOND",
      ],
      Array [
        4,
        "HEART",
      ],
      Array [
        4,
        "SPADE",
      ],
      Array [
        4,
        "NO_TRUMPS",
      ],
      Array [
        5,
        "CLUB",
      ],
      Array [
        5,
        "DIAMOND",
      ],
      Array [
        5,
        "HEART",
      ],
      Array [
        5,
        "SPADE",
      ],
      Array [
        5,
        "NO_TRUMPS",
      ],
      Array [
        6,
        "CLUB",
      ],
      Array [
        6,
        "DIAMOND",
      ],
      Array [
        6,
        "HEART",
      ],
      Array [
        6,
        "SPADE",
      ],
      Array [
        6,
        "NO_TRUMPS",
      ],
      Array [
        7,
        "CLUB",
      ],
      Array [
        7,
        "DIAMOND",
      ],
      Array [
        7,
        "HEART",
      ],
      Array [
        7,
        "SPADE",
      ],
      Array [
        7,
        "NO_TRUMPS",
      ],
    ],
    "bid": "PASS",
    "cards": Array [
      Array [
        "JACK",
        "CLUB",
      ],
      Array [
        "2",
        "SPADE",
      ],
      Array [
        "ACE",
        "SPADE",
      ],
      Array [
        "2",
        "DIAMOND",
      ],
      Array [
        "4",
        "CLUB",
      ],
      Array [
        "9",
        "HEART",
      ],
      Array [
        "QUEEN",
        "SPADE",
      ],
      Array [
        "10",
        "CLUB",
      ],
      Array [
        "KING",
        "HEART",
      ],
      Array [
        "2",
        "CLUB",
      ],
      Array [
        "ACE",
        "CLUB",
      ],
      Array [
        "6",
        "SPADE",
      ],
      Array [
        "QUEEN",
        "DIAMOND",
      ],
    ],
    "currentUserAction": false,
    "declarer": false,
    "dummy": false,
    "isUser": true,
    "name": "player4Name",
    "numberOfCardsHeld": 13,
  },
}
`;

exports[`a game 2`] = `
Object {
  "availableContracts": Array [
    Array [
      3,
      "SPADE",
    ],
    Array [
      3,
      "NO_TRUMPS",
    ],
    Array [
      4,
      "CLUB",
    ],
    Array [
      4,
      "DIAMOND",
    ],
    Array [
      4,
      "HEART",
    ],
    Array [
      4,
      "SPADE",
    ],
    Array [
      4,
      "NO_TRUMPS",
    ],
    Array [
      5,
      "CLUB",
    ],
    Array [
      5,
      "DIAMOND",
    ],
    Array [
      5,
      "HEART",
    ],
    Array [
      5,
      "SPADE",
    ],
    Array [
      5,
      "NO_TRUMPS",
    ],
    Array [
      6,
      "CLUB",
    ],
    Array [
      6,
      "DIAMOND",
    ],
    Array [
      6,
      "HEART",
    ],
    Array [
      6,
      "SPADE",
    ],
    Array [
      6,
      "NO_TRUMPS",
    ],
    Array [
      7,
      "CLUB",
    ],
    Array [
      7,
      "DIAMOND",
    ],
    Array [
      7,
      "HEART",
    ],
    Array [
      7,
      "SPADE",
    ],
    Array [
      7,
      "NO_TRUMPS",
    ],
  ],
  "bid": "PASS",
  "cards": Array [
    Array [
      "JACK",
      "CLUB",
    ],
    Array [
      "2",
      "SPADE",
    ],
    Array [
      "ACE",
      "SPADE",
    ],
    Array [
      "2",
      "DIAMOND",
    ],
    Array [
      "4",
      "CLUB",
    ],
    Array [
      "9",
      "HEART",
    ],
    Array [
      "QUEEN",
      "SPADE",
    ],
    Array [
      "10",
      "CLUB",
    ],
    Array [
      "KING",
      "HEART",
    ],
    Array [
      "2",
      "CLUB",
    ],
    Array [
      "ACE",
      "CLUB",
    ],
    Array [
      "6",
      "SPADE",
    ],
    Array [
      "QUEEN",
      "DIAMOND",
    ],
  ],
  "currentUserAction": false,
  "declarer": false,
  "direction": "west",
  "dummy": false,
  "name": "player4Name",
}
`;
